--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
                 <li><a href="aboutbgr.html">About</a></li>
             </ul>
         </div>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="webindex.css">
+
+</head>
+ <body background="C:\Users\laure\OneDrive\Desktop\Final website\burger.jpg">
+    <div class="banner">
+    <div class="navbar">
+        
+            <img src="logo.png" class="logo">
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="burger.html">Menu</a></li>
+                <li><a href="combo.html">Combo-meal</a></li>
+                <li><a href="aboutbgr.html">About</a></li>
+            </ul>
+        </div>
+        <h2>BURGER KA SAKIN!</h2>
+        <p>
+        <br> "Imagine sinking your teeth into a perfectly grilled burger that's cooked to perfection.<br>
+        The juicy, flame-kissed patty is nestled between two soft, toasted buns, creating the <br>
+        perfect vessel for a symphony of flavors. As you take your first bite, you're greeted <br>
+       with a burst of savory goodness as the robust seasoning of the patty dances on your <br>
+       taste buds. The meat is succulent and tender, oozing with melted cheese that adds a <br>
+        creamy, indulgent element to each bite.<br>
+        </p>
     
+</body>
+</html>
 </body>
 </html>
